# das-mesh-workbench

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-ubuntu-20.04.yaml
res/: application.qrc
scripts/: build-on-clean-os-ubuntu-20.04.sh
src/: DmwActionCallback.hxx  DmwApplication.cxx  DmwApplication.hxx  DmwGuiKernel.cxx  DmwGuiKernel.hxx  DmwKernel.cxx  DmwKernel.hxx  DmwMainWindow.cxx  DmwMainWindow.hxx  DmwMainWindow.ui  DmwMeshAction.hxx  DmwMeshActionGenerateSampleUnstructuredGrid.cxx  DmwMeshActionGenerateSampleUnstructuredGrid.hxx  DmwMeshActionImportSalomeDatFile.cxx  DmwMeshActionImportSalomeDatFile.hxx  DmwMeshActionText3dGenerator.cxx  DmwMeshActionText3dGenerator.hxx  DmwMeshActionText3dGeneratorGui.cxx  DmwMeshActionText3dGeneratorGui.hxx  DmwMeshActionText3dGeneratorGui.ui  DmwMeshChunk.cxx  DmwMeshChunk.hxx  DmwMeshChunkVisual.cxx  DmwMeshChunkVisual.hxx  DmwModel.cxx  DmwModel.hxx  DmwText3dGenerator.cxx  DmwText3dGenerator.hxx  DmwText3dGeneratorActionCallback.cxx  DmwText3dGeneratorActionCallback.hxx  DmwText3dGeneratorGui.cxx  DmwText3dGeneratorGui.hxx  DmwText3dGeneratorGui.ui  DmwViewer.cxx  DmwViewer.hxx  MainWindow.cxx  MainWindow.hxx  MainWindow.ui  main.cxx
src/core/: DmwApplication.cxx
